# Humanoide

./: .gitignore  ESTADO.md  README.md  requirements.txt
G1/: GUIA_RAPIDA.txt  INSTALACION.txt  MANUAL_G1.md  PLAN_SENSOR_MANIPULACION_G1.md  README.md
G1/codigos/: README.md
G1/despliegue/: README.md  deploy_dual.py  deploy_motion.py
G1/entrenamiento/: README.md  eval_agacharse_v10.sh  export_motion_policy.py  export_politica.py  train_agacharse_v10.sh  validate_motion.py
G1/envs/: g1_udc_backup.yml  hgen_backup.yml
G1/escenas/: .asset_hash  config.yaml  g1_23dof.urdf  g1_29dof.xml
G1/planes_de_trabajo/: plan_01_xml_sensores_integrado.md  plan_02_politica_agarre_estatico.md  plan_02b_motion_kimi.md  plan_02b_politicas_movimiento.md  plan_03_politica_navegacion_lidar3d.md  plan_04_integracion_jerarquica.md  plan_05_validacion_y_despliegue.md
G1/politicas/: README.md
G1/reportes/: REPORTE_COMPLETO_MANIPULACION_G1.md  (+9 more)
R1/: README.md
R1/Ubuntu_ROS2/codigos/ros2_ws/src/r1_bringup/: CMakeLists.txt  package.xml
R1/Ubuntu_ROS2/codigos/ros2_ws/src/r1_bringup/config/: default_pose.yaml  joint_order_map.yaml  pd_gains.yaml
R1/Ubuntu_ROS2/codigos/ros2_ws/src/r1_bringup/launch/: real.launch.py  sim.launch.py  view_sim.launch.py
R1/Ubuntu_ROS2/codigos/ros2_ws/src/r1_inference/: package.xml  setup.cfg  setup.py
R1/Ubuntu_ROS2/codigos/ros2_ws/src/r1_inference/r1_inference/: inference_node.py  sdk_bridge.py
herramientas/: README.md  convert_and_fix_urdf.py  convert_g1_12dof.py  convert_mujoco_to_urdf.py  convert_mujoco_to_urdf_simple.py  convert_urdf_to_usd.py  fix_usd_articulation.py  setup_ros2_env.sh
yolo/: explain.md
(+241 files in other folders)
